a not so nice alignment fix for friends and invites

--- a/kifi-backend/modules/shoebox/angular-black/src/invite/connectionCard.styl
+++ b/kifi-backend/modules/shoebox/angular-black/src/invite/connectionCard.styl
@@ -18,6 +18,10 @@
 
 
 .kf-connection-card-container
+  padding-right: 4px
+  @media screen and (max-width: 1365px)
+    padding-right: 7px
+
   .kf-connection-card
     @media screen and (min-width: 1365px)
       width: calc(50% - 28px)
